# stargan

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  train.py
afhq/: config.yaml
celebahq/: config.yaml
notbooks/: examples.ipynb
notebooks/: 02_hw_StarGAN.ipynb
outputs/2025-02-17/19-57-14/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-17/19-58-59/.hydra/: hydra.yaml
src/configs/: train.yaml
src/configs/dataloader/: dataloader.yaml
src/configs/datasets/: afhq.yaml  celeba_hq.yaml
src/configs/loss_function/: loss_function.yaml  relativistic_loss.yaml
src/configs/metrics/: metrics.yaml
src/configs/model/: StarGAN.yaml
src/configs/optimizer/: optimizers.yaml
src/configs/transforms/: transforms.yaml
src/configs/writer/: wandb.yaml
src/datasets/: __init__.py  base_dataset.py  celeba_hq_dataset.py  collate.py  data_utils.py  hq_dataset.py
src/logger/: __init__.py  logger.py  logger_config.json  wandb.py
src/loss/: __init__.py  cycle.py  gan_loss.py  loss.py  r1_term.py  relativistic_adversarial.py  relativistic_loss.py  style_diversity.py  style_reconstruction.py  wasserstein.py
src/metrics/: __init__.py  base_metric.py  fid.py  inception_score.py  lpips.py  tracker.py
src/model/: __init__.py  ema.py  model_utils.py  stargan.py
src/model/layers/: __init__.py  adaIn.py  generator.py  initialization_utils.py  mapping.py  residual.py  resnet.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/utils/: init_utils.py  io_utils.py
(+7 files in other folders)
